--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -176,16 +176,16 @@ footer {
 }
 .container {
   display: flex;
-  align-items: flex-start; /* Align items at the start of the flex container */
+  align-items: flex-start;
 }
 
 .profile-image {
-  flex-basis: 30%; /* Adjust the image width */
+  flex-basis: 30%;
   padding: 20px;
 }
 
-.about-section,
-.interests-section {
-  flex-basis: 35%; /* Adjust the text width */
+.about-section {
+  flex-basis: calc(70% - 40px); /* Adjust the text width */
   padding: 20px;
+  margin-left: auto; /* Move the about-section to the right */
 }
