--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -173,18 +173,25 @@ footer {
 }
 .container {
   display: flex;
-  align-items: flex-start;
-  flex-wrap: wrap; /* Allow flex items to wrap */
 }
 
 .profile-image {
-  flex: 0 0 30%; /* Adjust the image width */
+  flex: 1;
   padding: 20px;
+  max-width: 30%; /* Adjust the image width */
 }
 
-.about-section,
-.interests-section {
-  flex: 0 0 35%; /* Adjust the text width */
+.content {
+  flex: 2;
   padding: 20px;
-  margin-right: 20px; /* Adjust margin between sections */
+  max-width: 70%; /* Adjust the content width */
+}
+
+.about-section {
+  margin-left: auto; /* Moves the Introduction section to the right */
+}
+
+.about-section p,
+.interests-section ul {
+  margin-bottom: 20px; /* Increase space between lines */
 }
