--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -171,6 +171,7 @@ footer {
   justify-content: space-around;
   align-items: center;
 }
+/* about me page css */
 .container {
   display: flex;
   justify-content: space-between;
