--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -209,14 +209,17 @@ footer {
   padding: 0 20px;
 }
 
-.course h3,
-.course ul,
-.course p {
+.course h3 {
   text-align: center;
+  background-color: #f2f2f2; /* Choose your desired background color */
+  padding: 10px;
+  border-radius: 5px; /* Rounded corners for the box */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for depth */
+  margin-bottom: 20px; /* Spacing between course titles */
 }
 
-.course p,
-.course ul {
+.course ul,
+.course p {
   text-align: left;
   margin-left: 30px; /* Indent the text for better readability */
 }
