--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -211,7 +211,7 @@ footer {
 
 .course h3 {
   text-align: center;
-  background-color: #f2f2f2; /* Choose your desired background color */
+  background-color: #4b73df; /* Choose your desired background color */
   padding: 10px;
   border-radius: 5px; /* Rounded corners for the box */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for depth */
