--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -215,7 +215,7 @@ footer {
 
 .course h3 {
   text-align: center;
-  background-color: #4b73df; /* Choose your desired background color */
+  background-color: #4b73df;
   padding: 15px; /* Increase padding for the colored frame */
   border-radius: 5px; /* Rounded corners for the box */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for depth */
