--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -5,7 +5,7 @@ h1, h2, h3, ul, li {
     font-family: Merienda, cursive;
   }
 body {
-  background-color: #9f9f9f;
+  background-color: white;
 }
   /* Ensuring the header takes full width */
   header {
