--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -165,7 +165,7 @@ footer .social img {
   padding-top: 15px;
 }
 footer {
-  background-color: #4b73df;
+  background-color: #059337;
   color: white;
   padding: 25px 50px;
   margin-top: 200px;
