--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -54,6 +54,7 @@ body {
     text-align: left; /* Align image to the left */
     padding-right: 30px; /* Add space between image and text */
     box-sizing: border-box;
+    grid-template-columns: 1 / 3;
   }
   .audience-image img {
     width: 100%; /* Make the image fill the container */
