--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -51,7 +51,7 @@ body {
   }
   .audience-image {
     flex-basis: 60%; /* Adjust image width */
-    text-align: left; /* Align image to the left */
+    text-align: right; /* Align image to the left */
     padding-right: 30px; /* Add space between image and text */
     box-sizing: border-box;
   }
