--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -33,7 +33,7 @@ body {
   
   nav ul li a {
     text-decoration: none;
-    color: lightgrey
+    color: grey
   }
   .spacer {
     height: 50px;
