--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -39,35 +39,41 @@ body {
   .spacer {
     height: 50px;
   }
-  
-  /* Styling the audience section */
-  .audience-section {
-    max-width: 800px;
-    margin: 0 auto;
-    overflow: hidden;
-  }
-  .audience-content {
-    display: flex;
-    flex-direction: row;
-  }
-  .audience-image {
-    flex-basis: 80%; /* Adjust image width */
-    text-align: right; /* Align image to the left */
-    padding-right: 200px; /* Add space between image and text */
-    box-sizing: border-box;
-  }
-  .audience-image img {
-    width: 100%; /* Make the image fill the container */
-    height: auto; /* Maintain image aspect ratio */
-    display: block; /* Remove extra space under the image */
-  }
-  .audience-text {
-    flex-basis: 60%; /* Adjust text width */
-    text-align: justify; /* Justify text */
-    box-sizing: border-box;
-    font-family: Noto Sans;
-    font-size: medium;
-  }
+    /* Styling the audience section */
+    .audience-section {
+      max-width: 800px;
+      margin: 0 auto;
+      overflow: hidden;
+    }
+    
+    .audience-content {
+      display: flex;
+      flex-direction: row;
+      width: 50%; /* Set the audience content to take up half of the page */
+      margin: 0 auto; /* Center the content */
+    }
+    
+    .audience-image {
+      flex-basis: 50%; /* Adjusted to take up half of the audience content */
+      text-align: right;
+      padding-right: 20px; /* Adjust space between image and text */
+      box-sizing: border-box;
+    }
+    
+    .audience-image img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    
+    .audience-text {
+      flex-basis: 50%; /* Adjusted to take up half of the audience content */
+      text-align: justify;
+      box-sizing: border-box;
+      font-family: Noto Sans;
+      font-size: medium;
+    }
+    
 /* Creating space after the audience section */
 .spacer {
   height: 50px;
