--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -54,8 +54,8 @@ body {
     }
     
     .audience-image {
-      flex-basis: 50%; /* Adjusted to take up half of the audience content */
-      text-align: right;
+      flex-basis: 40%; /* Adjusted to take up 40% of the audience content */
+      text-align: left; /* Align image to the left */
       padding-right: 20px; /* Adjust space between image and text */
       box-sizing: border-box;
     }
@@ -67,12 +67,13 @@ body {
     }
     
     .audience-text {
-      flex-basis: 50%; /* Adjusted to take up half of the audience content */
-      text-align: justify;
+      flex-basis: 60%; /* Adjusted to take up 60% of the audience content */
+      text-align: justify; /* Justify the text */
       box-sizing: border-box;
       font-family: Noto Sans;
       font-size: medium;
     }
+    
     
 /* Creating space after the audience section */
 .spacer {
