--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -48,7 +48,7 @@ body {
     
     .audience-content {
       display: flex;
-      flex-direction: row;
+      flex-direction: row-reverse; /* Reverses the order of flex items */
       width: 50%; /* Set the audience content to take up half of the page */
       margin: 0 auto; /* Center the content */
     }
@@ -56,6 +56,7 @@ body {
     .audience-image {
       flex-basis: 40%; /* Adjusted to take up 40% of the audience content */
       text-align: left; /* Align image to the left */
+      padding-right: 20px; /* Adjust space between image and text */
       box-sizing: border-box;
     }
     
@@ -67,10 +68,12 @@ body {
     
     .audience-text {
       flex-basis: 60%; /* Adjusted to take up 60% of the audience content */
+      text-align: justify; /* Justify the text */
       box-sizing: border-box;
       font-family: Noto Sans;
       font-size: medium;
     }
+    
     
     
     
