--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -43,67 +43,69 @@ nav ul li a {
   padding-top: 20px; /* Add space above the audience section */
   padding-bottom: 20px; /* Add space below the audience section */
 }
-
 .audience-content {
   display: flex;
   flex-direction: row;
   margin: 0 auto; /* Center the content */
 }
-
 .audience-image {
   text-align: left; /* Align image to the left */
   box-sizing: border-box;
   padding-right: 80px; /* Add space between image and text */
 }
-
 .audience-image img {
   max-width: 300px; /* Set maximum width for the image */
   height: auto;
   display: block;
 }
-
 .audience-text {
   box-sizing: border-box;
   font-family: Noto Sans;
   font-size: medium;
 }
-
 .audience-title {
   text-align: center; /* Center the Audience title */
 }
-
-  
 /* Creating space after the audience section */
 .spacer {
   height: 50px;
 }
-.vision-section {
-  max-width: 800px;
-  margin: 0 auto;
-  overflow: hidden;
-}
-.vision-content {
-  display: flex;
-  flex-direction: row;
-}
-.vision-image {
-  flex-basis: 80%;
-  text-align: right;
-  padding-right: 200px;
-  box-sizing: border-box;
-}
-.vision-image img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-.vision-text {
-  flex-basis: 60%;
-  text-align: justify;
-  box-sizing: border-box;
-  font-family: Noto Sans;
-  font-size: medium;
-}
+  .vision-section {
+    max-width: 800px;
+    margin: 0 auto;
+    overflow: hidden;
+    padding-top: 20px; /* Add space above the vision section */
+    padding-bottom: 20px; /* Add space below the vision section */
+  }
+  
+  .vision-content {
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto; /* Center the content */
+  }
+  
+  .vision-image {
+    text-align: left; /* Align image to the left */
+    box-sizing: border-box;
+    padding-right: 80px; /* Add space between image and text */
+  }
+  
+  .vision-image img {
+    max-width: 300px; /* Set maximum width for the image */
+    height: auto;
+    display: block;
+  }
+  
+  .vision-text {
+    box-sizing: border-box;
+    font-family: Noto Sans;
+    font-size: medium;
+  }
+  
+  .vision-title {
+    text-align: center; /* Center the Vision title */
+  }
+  
 p {
   font-family: Noto Sans;
 }
