--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -113,6 +113,7 @@ p {
 .vision-text {
     font-size: 18px; 
     line-height: 1.5;
+    justify-content: left;
 }
   .title-frame {
     background-color: #f2f2f2; /* Background color for the title frame */
