--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -5,7 +5,7 @@ h1, h2, h3 {
     font-family: Merienda, cursive;
   }
 body {
-  background-color: lightblue;
+  background-color: rgb(42, 104, 204);
 }
 /* Ensuring the header takes full width */
 header {
