--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -176,7 +176,7 @@ footer .social img {
   padding-top: 15px;
 }
 footer {
-  background-color: #059337;
+  background-color: #3c7beb;
   color: white;
   padding: 25px 50px;
   margin-top: 200px;
