--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -13,7 +13,7 @@ header {
   background-color: rgb(72, 127, 215); 
   text-align: center; /* Center align the content inside the header */
   padding: 0 auto; 
-  background-color: rgb(72, 127, 215);
+  background-color: lightblue;
   }
 /* Styling the logo */
 .logo img {
