--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -265,7 +265,7 @@ footer {
 /* Change the color of links on hover */
 .navbar a:hover {
   background-color: #ddd;
-  color: black;
+  color: lightgray;
 }
 
 /* Add a color to the active/current link */
