--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -244,7 +244,7 @@ footer {
 }
 /* Place the navbar at the bottom of the page, and make it stick */
 .navbar {
-  background-color: #333;
+  background-color: #4b73df;
   overflow: hidden;
   position: fixed;
   bottom: 0;
@@ -265,7 +265,7 @@ footer {
 /* Change the color of links on hover */
 .navbar a:hover {
   background-color: #ddd;
-  color: lightgray;
+  color: black;
 }
 
 /* Add a color to the active/current link */
