--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -270,6 +270,6 @@ footer {
 
 /* Add a color to the active/current link */
 .navbar a.active {
-  background-color: #04AA6D;
+  background-color: #4b73df;
   color: white;
 }
