--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -249,6 +249,7 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
+  padding-top: 0.5px;
 }
 
 /* Style the links inside the navigation bar */
