--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -220,7 +220,7 @@ footer {
   text-align: center;
   line-height: 2; /* Increased line height for more spacing */
   font-size: 20px; /* Increased font size for the introduction text */
-  font-family: 'Noto Sans', sans-serif;
+  font-family: Noto Sans;
   /* Other paragraph styles for introduction text */
 }
 
