--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -197,6 +197,7 @@ footer {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
+  margin-right: 20px; /* Added margin to create space between card and introduction */
 }
 
 .introduction {
@@ -209,25 +210,29 @@ footer {
 /* Styles for introduction title and text */
 .introduction .about-section {
   text-align: center;
+  margin-bottom: 20px; /* Added margin to create space between introduction title and text */
 }
 
 .introduction .about-section h2 {
-  font-size: 28px; /* Increased font size for the introduction title */
+  font-size: 28px;
+  margin-bottom: 15px; /* Added margin between introduction title and text */
   /* Additional styles for the introduction title */
 }
 
 .introduction .about-section p {
   text-align: center;
-  line-height: 2; /* Increased line height for more spacing */
-  font-size: 20px; /* Increased font size for the introduction text */
-  font-family: Noto Sans;
+  line-height: 2;
+  font-size: 20px;
+  font-family: 'Noto Sans', sans-serif;
+  /* Other paragraph styles for introduction text */
 }
 
 .interest-section ul {
-  text-align: left;
-  font-size: 18px; /* Increased font size for the interests */
-  font-family: Noto Sans;
-  line-height: 2; /* Increased line height for more spacing */
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Noto Sans', sans-serif;
+  line-height: 2;
+  margin-top: 20px; /* Added margin between introduction text and interest title */
   /* Other styles for interest list */
 }
 
@@ -243,22 +248,7 @@ button {
   display: inline-block;
   padding: 8px;
   color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  font-size: 18px;
-}
-
-a {
-  text-decoration: none;
-  font-size: 22px;
-  color: black;
-}
-
-button:hover,
-a:hover {
-  opacity: 0.7;
+  background-color: #000
 }
 
 /* course page CSS start now*/
