--- a/get2work/styles/styles.css
+++ b/get2work/styles/styles.css
@@ -214,24 +214,24 @@ footer {
 }
 
 .introduction .about-section h2 {
-  font-size: 28px;
+  font-size: 28px; /* Increased font size for the introduction title */
   margin-bottom: 15px; /* Added margin between introduction title and text */
   /* Additional styles for the introduction title */
 }
 
 .introduction .about-section p {
   text-align: center;
-  line-height: 2;
-  font-size: 20px;
+  line-height: 2; /* Increased line height for more spacing */
+  font-size: 20px; /* Increased font size for the introduction text */
   font-family: 'Noto Sans', sans-serif;
   /* Other paragraph styles for introduction text */
 }
 
 .interest-section ul {
   text-align: center;
-  font-size: 20px;
+  font-size: 20px; /* Increased font size for the interests */
   font-family: 'Noto Sans', sans-serif;
-  line-height: 2;
+  line-height: 2; /* Increased line height for more spacing */
   margin-top: 20px; /* Added margin between introduction text and interest title */
   /* Other styles for interest list */
 }
@@ -248,8 +248,24 @@ button {
   display: inline-block;
   padding: 8px;
   color: white;
-  background-color: #000
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
 }
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover,
+a:hover {
+  opacity: 0.7;
+}
+
 
 /* course page CSS start now*/
 .course-content {
